manifests/rhoai/manager_config_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeflow-trainer-controller-manager
spec:
  template:
    metadata:
      annotations:
        trainer.kubeflow.org/metrics-auth: enabled
    spec:
      containers:
      - name: manager
        image: $(image)
        args:
        - --config=/controller_manager_config.yaml
        - --zap-log-level=2
        volumeMounts:
        - name: kubeflow-trainer-config
          mountPath: /controller_manager_config.yaml
          subPath: controller_manager_config.yaml
          readOnly: true
      volumes:
      - name: kubeflow-trainer-config
        configMap:
          name: kubeflow-trainer-config
      - name: cert
        secret:
          defaultMode: 420
          secretName: kubeflow-trainer-webhook-cert
